named query in User class added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ijot_messenger?serverTimezone=Europe/Warsaw&useSSL=False
+spring.datasource.url=jdbc:mysql://localhost:3306/ijot_messenger?\
+serverTimezone=Europe/Warsaw&useSSL=False
 spring.datasource.username=ijot
 spring.datasource.password=smart
 spring.jpa.database=mysql
