--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ijot_messenger?serverTimezone=
 spring.datasource.username=ijot
 spring.datasource.password=smart
 spring.jpa.database=mysql
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.event.merge.entity_copy_observer=log
 # Session store type
 #spring.redis.host=localhost
 #spring.redis.port=6379
@@ -11,9 +13,13 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 #logs the prepared statement parameters
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.event.internal.EntityCopyAllowedLoggedObserver=DEBUG
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+#hibernate.globally_quoted_identifiers_skip_column_definitions = true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.h2.console.enabled=true
 spring.jpa.open-in-view=false
 openweathermap.api.endpoint=https://api.openweathermap.org/data/2.5/weather
